ci-cd/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: travel-web
  labels:
    app.kubernetes.io/part-of: travel-web
    app.kubernetes.io/managed-by: kustomize
